--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,45 @@
 asgiref==3.2.7
+boto3==1.14.47
+botocore==1.17.47
+certifi==2020.6.20
+chardet==3.0.4
 defusedxml==0.6.0
 diff-match-patch==20181111
 dj-database-url==0.5.0
 Django==3.0.5
+django-autoslug==1.9.8
+django-cors-headers==3.4.0
+django-heroku==0.3.1
+django-hosts==4.0
 django-import-export==2.0.2
+django-phonenumber-field==5.0.0
+django-storages==1.9.1
+djangorestframework==3.11.1
+djangorestframework-simplejwt==4.4.0
+docutils==0.15.2
 et-xmlfile==1.0.1
+future==0.18.2
 gunicorn==20.0.4
+idna==2.10
 jdcal==1.4.1
+jmespath==0.10.0
 MarkupPy==1.14
 odfpy==1.4.1
 openpyxl==3.0.3
+phonenumbers==8.12.8
+Pillow==7.2.0
 psycopg2==2.8.5
+PyJWT==1.7.1
+python-dateutil==2.8.1
+python-whois==0.7.3
 pytz==2019.3
+requests==2.24.0
+s3transfer==0.3.3
+six==1.15.0
 sqlparse==0.3.1
+stripe==2.50.0
 tablib==1.1.0
+urllib3==1.25.10
+whitenoise==5.2.0
 xlrd==1.2.0
 xlwt==1.3.0
-django-heroku
-whitenoise
-boto3
-django-storages
-django-autoslug
-djangorestframework_simplejwt
-djangorestframework
-django-cors-headers
-stripe
-python-whois
-django-hosts
