--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,32 @@
-asgiref==3.2.10
+asgiref>=3.2.10
 defusedxml==0.6.0
 diff-match-patch==20200713
 dj-database-url==0.5.0
-Django==3.1.1
-django-import-export==2.3.0
+Django>=3.1.1
+django-import-export>=2.3.0
 et-xmlfile==1.0.1
-gunicorn==20.0.4
+gunicorn>=20.0.4
 jdcal==1.4.1
 MarkupPy==1.14
 odfpy==1.4.1
-openpyxl==3.0.3
-psycopg2==2.8.5
-pytz==2019.3
-sqlparse==0.3.1
-tablib==1.1.0
-xlrd==1.2.0
-xlwt==1.3.0
+openpyxl>=3.0.3
+psycopg2>=2.8.5
+pytz>=2019.3
+sqlparse>=0.3.1
+tablib>=1.1.0
+xlrd>=1.2.0
+xlwt>=1.3.0
 django-heroku
 whitenoise
 boto3
-django-storages
-django-autoslug==1.9.8
+django-storages>=1.11.1
+django-autoslug>=1.9.8
 djangorestframework_simplejwt
 djangorestframework
-django-cors-headers
+django-cors-headers>=3.6.0
 stripe
 python-whois
 django-hosts
 pillow
 django-phonenumber-field==5.0.0
-phonenumbers==8.12.8
+phonenumbers>=8.12.8
