--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,63 @@
-asgiref>=3.2.10
+asgiref==3.4.1
+astroid==2.6.2
+autopep8==1.5.7
+boto3==1.17.111
+botocore==1.20.111
+certifi==2021.5.30
+charset-normalizer==2.0.1
+colorama==0.4.4
 defusedxml==0.6.0
 diff-match-patch==20200713
 dj-database-url==0.5.0
-Django>=3.1.1
-django-import-export>=2.3.0
-et-xmlfile==1.0.1
-gunicorn>=20.0.4
-jdcal==1.4.1
-MarkupPy==1.14
-odfpy==1.4.1
-openpyxl>=3.0.3
-psycopg2>=2.8.5
-pytz>=2019.3
-sqlparse>=0.3.1
-tablib>=1.1.0
-xlrd>=1.2.0
-xlwt>=1.3.0
-django-heroku
-whitenoise
-boto3
-django-storages>=1.11.1
-django-autoslug>=1.9.8
-djangorestframework_simplejwt
-djangorestframework
-django-cors-headers>=3.6.0
-stripe
-python-whois
-django-hosts
-pillow
+Django==3.2.5
+django-amazon-ses==4.0.0
+django-autoslug==1.9.8
+django-cors-headers==3.7.0
+django-debug-toolbar==3.2.1
+django-extensions==3.1.3
+django-heroku==0.3.1
+django-hosts==4.0
+django-import-export==2.5.0
 django-phonenumber-field==5.0.0
-phonenumbers>=8.12.8
-django-ses>=1.0.3
-django-amazon-ses
+django-ses==2.1.1
+django-storages==1.11.1
+djangorestframework==3.12.4
+djangorestframework-simplejwt==4.7.2
+et-xmlfile==1.0.1
+future==0.18.2
+gunicorn==20.1.0
+idna==3.2
+isort==5.9.2
+jdcal==1.4.1
+jmespath==0.10.0
+lazy-object-proxy==1.6.0
+MarkupPy==1.14
+mccabe==0.6.1
+odfpy==1.4.1
+openpyxl==3.0.7
+phonenumbers==8.12.27
+Pillow==8.3.1
+psycopg2==2.9.1
+pycodestyle==2.7.0
+PyJWT==2.1.0
+pylint==2.9.3
+pylint-django==2.4.4
+pylint-plugin-utils==0.6
+python-dateutil==2.8.2
+python-dotenv==0.18.0
+python-whois==0.7.3
+pytz==2021.1
+PyYAML==5.4.1
+requests==2.26.0
+s3transfer==0.4.2
+six==1.16.0
+sqlparse==0.4.1
+stripe==2.59.0
+tablib==3.0.0
+toml==0.10.2
+urllib3==1.26.6
+Werkzeug==2.0.1
+whitenoise==5.2.0
+wrapt==1.12.1
+xlrd==2.0.1
+xlwt==1.3.0
