--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ django-extensions==3.1.3
 django-heroku==0.3.1
 django-hosts==4.0
 django-import-export==2.5.0
+django-jazzmin==2.4.7
 django-phonenumber-field==5.0.0
 django-ses==2.1.1
 django-storages==1.11.1
