worked on the client progress system

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,2 @@
-STRIPE_PUBLISHABLE_KEY ='a;sdlfkasdfasdf'
-STRIPE_SECRET_KEY = 'asdfasdfasdfasdf'
+STRIPE_PUBLISHABLE_KEY =a;sdlfkasdfasdf
+STRIPE_SECRET_KEY = asdfasdfasdfasdf
